integration_tests/codegen_fail/fail/union/trait_non_object_variant.stderr
error[E0277]: the trait bound `Test: GraphQLObject<__S>` is not satisfied
 --> fail/union/trait_non_object_variant.rs:9:1
  |
9 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^ the trait `GraphQLObject<__S>` is not implemented for `Test`
  |
  = note: this error originates in the attribute macro `graphql_union` (in Nightly builds, run with -Z macro-backtrace for more info)
